--- a/src/components/topnav/topnav.css
+++ b/src/components/topnav/topnav.css
@@ -1,5 +1,4 @@
-.tonav {
-    background-color: rgb(182, 201, 88);
+.topnav {
     height: 50px;
     /* border: 2px solid black; */
     margin-top: 2%;
@@ -11,12 +10,36 @@
     align-items: flex-start;
     justify-content: space-between;
     align-items: center;
+    border:3px solid #dae2ed;
 
-    
+
+
 }
-.side-nav{
+
+.side-nav {
     margin-left: 1%;
 }
-.login{
+
+.login {
     margin: 1%;
+}
+
+.material {
+    display: flex;
+    gap: 10px;
+}
+
+.hori-icon{
+    /* border-color:#dae2ed;
+    background-color: #ffffff;
+    border-radius: '50%' */
+    border:1px solid #dae2ed;
+    width: 35px;
+    height: 35px;
+    border-radius: 11px;
+    background-color: #ffffff;
+
+
+    
+
 }
